# prEEG

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prEEG.csproj
data/: sample.csv
data/tests/: alpha_dominant.csv  beta_dominant.csv  delta_dominant.csv  gamma_dominant.csv  mixed_alpha_beta.csv  noisy.csv  theta_dominant.csv
model/: eeg_mlp.onnx
scripts/: generate_sample_csvs.py  train_export_onnx.py
src/: features.cpp  features.h  main.cpp  onnx_infer.cpp  onnx_infer.h
